# Sfml-cmake-template

./: CMakeLists.txt  README.md
include/: App.h  CMakeLists.txt
src/: App.cpp  CMakeLists.txt  main.cpp
